# stellar-tipjar-contracts

contracts/tipjar/: Cargo.toml
contracts/tipjar/src/: lib.rs  quadratic_funding.rs  retroactive_funding.rs
contracts/tipjar/tests/: quadratic_funding_tests.rs  retroactive_funding_tests.rs
