[package]
name = "tipjar"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.4"
criterion = "0.5"

[[test]]
name = "gas_benchmarks"
path = "benches/gas_benchmarks.rs"

[[bench]]
name = "contract_bench"
harness = false

[[test]]
name = "quickcheck_properties"
path = "tests/quickcheck_properties.rs"

[[test]]
name = "tip_message_tests"
path = "tests/tip_message_tests.rs"

[[test]]
name = "events_leaderboard_snapshot_tests"
path = "tests/events_leaderboard_snapshot_tests.rs"

[[test]]
name = "withdrawal_limits_tests"
path = "tests/withdrawal_limits_tests.rs"

[[test]]
name = "multisig_withdrawal_tests"
path = "tests/multisig_withdrawal_tests.rs"

[[test]]
name = "options_trading_tests"
path = "tests/options_trading_tests.rs"

[[test]]
name = "batch_operations_tests"
path = "tests/batch_operations_tests.rs"

[[test]]
name = "liquidity_mining_tests"
path = "tests/liquidity_mining_tests.rs"

[[test]]
name = "bonding_curve_tests"
path = "tests/bonding_curve_tests.rs"

[[test]]
name = "twap_oracle_tests"
path = "tests/twap_oracle_tests.rs"

[[test]]
name = "quadratic_funding_tests"
path = "tests/quadratic_funding_tests.rs"

